[gd_scene load_steps=3 format=3 uid="uid://bgiuwib4vkehr"]

[ext_resource type="Script" path="res://scripts/interaction_zone.gd" id="1_ii83f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kur3i"]
size = Vector2(16, 16)

[node name="InteractionZone" type="Area2D"]
process_priority = -1
script = ExtResource("1_ii83f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_kur3i")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
